nesc-frontend/src/test/resources/integration/programs/good/good18/C.nc
/* Correct implementation of a module. */

configuration C
{
}
implementation
{
   components M;
}
