nesc-frontend/src/test/resources/integration/programs/bad/bad17/C.nc
/* Generic interface used as normal. */

configuration C
{
}
implementation
{
   components M;
}
